--- a/components/nodejs-dumivlwz/overlays/development/deployment-patch.yaml
+++ b/components/nodejs-dumivlwz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nodejs-dumivlwz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/sjmrhtap/nodejs-dumivlwz:81cd731c6927a2a8cb387de832c656d99c59e332@sha256:9cea08784a1883c67d6ac5bd9150b59bcd9c7ac4108cc7da9550127a0f741e26
+          name: container-image
